--- a/package.json
+++ b/package.json
@@ -8,20 +8,23 @@
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
+  "proxy": "https://192.168.1.25:8000", 
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.7.2",
-    "expo": "~51.0.8",
+    "expo": "^51.0.8",
     "expo-barcode-scanner": "~13.0.1",
     "expo-camera": "~15.0.9",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-gesture-handler": "^2.16.2",
     "react-native-qrcode-svg": "^6.3.1",
+    "react-native-safe-area-context": "^4.10.1",
     "react-native-svg": "^15.3.0",
     "react-native-web": "~0.19.10"
   },
