add qrCode and style for connexion and registration form

--- a/app.json
+++ b/app.json
@@ -12,7 +12,10 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSCameraUsageDescription": "Need camera access for scanning barcodes"
+      }
     },
     "android": {
       "adaptiveIcon": {
